Fix HTML structure and content for clarity

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@ En el siguiente video te muestro como colocarlo y de que manera.</i>
 <li> <a href="https://www.google.com.mx/?hl=es-419">Google en general</a></li>
 </ul>
 </nav>
-con esto ultimo, damos por terminado el nivel basico de este recorrido, para proseguir volvamos a la <a href="https://programs-jr.github.io/pagina-principal.github.io/">Pagina principal</a>.</i>
+con esto ultimo, damos por terminado el nivel basico de este recorrido, para proseguir volvamos a la <a href="https://programs-jr.github.io/pagina-principal/">Pagina principal</a>.</i>
 <script>
   alert("💭Bienvenid@ a la pagina de word microsoft, aqui te mostrare al igual que con power point, como crear un documento con todos los elementos necesarios para su presentacion💭")
 </script>
 </body>
 </html>
+
 
